--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,7 +15,13 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "@react-navigation/bottom-tabs": "^5.11.8",
+    "@react-navigation/native": "^5.9.3",
+    "@react-navigation/stack": "^5.14.3",
+    "react-native-maps": "0.30.2",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
